# AI-Automate-browser

./: .env  README.md  pyproject.toml
automate-browser/: README.md  pyproject.toml
automate-browser/src/: file_agent.py  mcp_agent.py  your_scenario.txt
automate-browser/src/automate_browser/: agent_prompt.py
