[project]
name = "automate-browser"
version = "0.1.0"
description = "An autonomous browser agent powered by Playwright and LLM"
authors = [
    { name = "Dany Tagne", email = "dany-william.tagne@inovaxo.fr" }
]
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-openai>=0.3.35",
    "mcp-use>=1.3.12",
    "playwright>=1.55.0",
]
